--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.1.5",
+    "multer": "^1.4.2",
     "sequelize": "^5.21.3",
     "yup": "^0.28.1"
   },
