--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.1.5",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.2",
     "sequelize": "^5.21.3",
     "yup": "^0.28.1"
   },
