--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.1.5",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
+    "nodemailer-express-handlebars": "^3.1.0",
     "sequelize": "^5.21.3",
     "yup": "^0.28.1"
   },
